# game2048-plonky2

./: Cargo.toml
benches/: game2048_benchmark.rs
src/: lib.rs  main.rs
src/game2048/: mod.rs
