[package]
name = "game2048_plonky2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "game2048_plonky2"
path = "src/lib.rs"

[dependencies]
plonky2 = "1.0.0"
anyhow = "1.0"


[dev-dependencies]
criterion = "0.5.0"

[[bench]]
name = "game2048_benchmark"
harness = false
